fix: remove id from get voting by id