@@ -3,8 +3,7 @@ package com.aristurtle.megakalservice.dto.util;
 import com.aristurtle.megakalservice.dto.VoteDTO;
 import com.aristurtle.megakalservice.model.Vote;
 
-import java.util.Calendar;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class VoteConverter {
@@ -24,20 +23,22 @@ public class VoteConverter {
                 .collect(Collectors.toList());
     }
 
-    public static VoteDTO convertToVoteDTO(List<Vote> votes) {
-        if (votes == null || votes.isEmpty()) {
-            return new VoteDTO();
+    public static List<VoteDTO> convertToVoteDTOList(List<Vote> votes) {
+        Map<String, List<Long>> usernamePerMarks = new HashMap<>();
+        for (Vote vote : votes) {
+            final String voterTgUsername = vote.getVoterTgUsername();
+            final long mark = vote.getMarkedDate().getTimeInMillis();
+            if (usernamePerMarks.containsKey(voterTgUsername)) {
+                usernamePerMarks.get(voterTgUsername).add(mark);
+            } else {
+                ArrayList<Long> marks = new ArrayList<>();
+                marks.add(mark);
+                usernamePerMarks.put(voterTgUsername, marks);
+            }
         }
 
-        VoteDTO voteDTO = new VoteDTO();
-        voteDTO.setVoterTgUsername(votes.getFirst().getVoterTgUsername()); // Берем имя пользователя из первого Vote
-
-        // Преобразуем markedDate из каждого Vote в long и добавляем в marks
-        List<Long> marks = votes.stream()
-                .map(vote -> vote.getMarkedDate().getTimeInMillis())
-                .collect(Collectors.toList());
-
-        voteDTO.setMarks(marks);
-        return voteDTO;
+        return usernamePerMarks.entrySet().stream()
+                .map(entry -> new VoteDTO(entry.getKey(), entry.getValue()))
+                .toList();
     }
 }
